<resources>
    <string name="app_name">Streetlity-Android</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="contribute">Contribute</string>
    <string name="title_activity_service_selection">ServiceSelection</string>
    <string name="service_selection">Service Selection</string>
    <string name="fix">Maintenance</string>
    <string name="atm">ATM</string>
    <string name="wc">Public Toilet</string>
    <string name="fuel">Fuel Station</string>
    <string name="location_confirmation">Help confirming a location</string>
    <string name="add_maintenance">Add Maintenance</string>
    <string name="add_atm">Add ATM</string>
    <string name="name">Name: </string>
    <string name="lat">Latitude:</string>
    <string name="lon">Longitude:</string>
    <string name="select_fr_map">Select from map</string>
    <string name="confirm">Confirm</string>
    <string name="type">Type:</string>
    <string name="other">Other:</string>
    <string name="name_of_place">Name of the place</string>
    <string name="name_of_bank">Name of the bank</string>
    <string name="title_activity_contribute">ContributeToService</string>
    <string name="title_activity_select_from_map">SelectFromMap</string>
    <string name="title_activity_add_maintenance">AddAMaintenance</string>
    <string name="title_activity_add_atm">AddAnATM</string>
    <string name="title_activity_bank_selection">BankSelection</string>
    <string name="search">Search for a bank</string>
    <string name="select_bank">Select your bank</string>
    <string name="review">Reviews:</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="email">Email</string>
    <string name="cfpassword">Confirm password</string>
    <string name="signup">Sign Up</string>
    <string name="input_bank_name">Input bank name here</string>
    <string name="go_to_addr">Go to address</string>
    <string name="go">Go</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="range">Range:</string>
    <string name="main_login">Join us</string>
    <string name="leave_review">Leave a review</string>
    <string name="your_comment">Leave your comment here</string>
    <string name="exist">Exist</string>
    <string name="non_exist">Doesn\'t exist</string>
    <string name="logout">Logout</string>
    <string name="user_info">User Info</string>
    <string name="username_info">Username:</string>
    <string name="email_info">Email:</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="change_pass">Change password</string>
    <string name="old_pass">Old password</string>
    <string name="new_pass">New password</string>
    <string name="cf_new_pass">Confirm new password</string>
    <string name="change">Change</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="send">Send</string>
    <string name="OTP">OTP</string>
    <string name="forgot_pass">Forgot password</string>
    <string name="reset_pass">Reset password</string>
    <string name="add_wc">Add public toilet</string>
    <string name="add_fuel">Add fuel station</string>
    <string name="note">Note:</string>
    <string name="note_hint">How to recognize the place</string>
    <string name="phone">Phone number</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="address">Your address</string>
    <string name="work_address">Your work address</string>
    <string name="not_user">Not a user?</string>
    <string name="or">Or</string>
    <string name="signup_as_maintain">Sign up as Maintainer</string>
    <string name="address_short">Address</string>
    <string name="phone_short">Phone</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="address_short_with">Address:</string>
    <string name="phone_short_with">Phone:</string>
    <string name="edit_profile">Edit profile</string>
    <string name="maintainer_signup">Maintainer Signup</string>
    <string name="title_activity_works">Works</string>
    <string name="order">Order</string>
    <string name="name_order">Name</string>
    <string name="prefer_time">Prefer time</string>
    <string name="note_without">Note</string>
    <string name="alert">Alert! This will notify nearby maintenance stores about your location. ONLY USE IN CASE OF EMERGENCY</string>
    <string name="reason">Reason</string>
    <string name="broadcast">Broadcast</string>
    <string name="my_works">My works</string>
    <string name="normal_order">Normal orders</string>
    <string name="Emergency_order">Emergency orders</string>
    <string name="no_order">No order</string>
    <string name="my_order">My order</string>
    <string name="history">History</string>
    <string name="title_activity_order_info">OrderInfo</string>
    <string name="order_info">Order info</string>
    <string name="prefer_time_with">Prefer time:</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="decline_order">Decline order?</string>
    <string name="why">Why?</string>
    <string name="cancel">Cancel</string>
    <string name="find_your_store">Find your work place from the map</string>
    <string name="title_activity_main_navigation_holder">MainNavigationHolder</string>
    <string name="home">Home</string>
    <string name="title_activity_navigaiton_drawer">NavigaitonDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sign_in"><u>Sign in?</u></string>

    <string name="about_us">About us</string>

    <string name="login_to_app">Login into Streetlity</string>

    <string name="not_login">Not logged in</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="additional_info">Additional information</string>
    <string name="user_type">What kind of user are you?</string>
    <string name="user_common">I just want to help expanding the locations</string>
    <string name="user_owner">I\'m an owner of a store</string>
    <string name="user_store_state">Is your store on the map?</string>
    <string name="user_store_yes">Yes, it is already on the map</string>
    <string name="user_store_no">No, i want to add it</string>

    <string name="signup_success">Sign up successfully</string>
    <string name="signup_success_owner">Sign up successfully\n Please wait for verification</string>
    <string name="please_select_type">Please select user type</string>
    <string name="empty_user_name">Empty username</string>
    <string name="empty_user_mail">Empty email</string>
    <string name="empty_pass">Empty password</string>
    <string name="empty_cf_pass">Empty confirm password</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="please_select_option">Please select an option</string>
    <string name="account_info">Account information</string>
    <string name="store_info">Store information</string>
    <string name="store_location">Where is your store located?</string>
    <string name="store_select">Select your store</string>
    <string name="please_select_store">Please select a store</string>
    <string name="username_short">Username too short</string>
    <string name="pass_short">Password too short</string>
    <string name="empty_address">Empty address</string>
    <string name="please_select_location">Please select a location</string>
    <string name="empty_name">Empty name</string>
    <string name="store_success">Store added successfully</string>
    <string name="atm_info">ATM information</string>
    <string name="atm_location">Where is the ATM located?</string>
    <string name="store_location_not_owner">Where is the store located?</string>
    <string name="atm_success">ATM added successfully</string>
    <string name="please_select_bank">Please select a bank</string>
    <string name="location_added">Location added</string>
</resources>
