<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/name_order"
        android:inputType="textPersonName"
        android:textColor="#000"
        android:textColorHint="#A3A3A3" />

    <EditText
        android:id="@+id/edt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/address_short"
        android:inputType="textPersonName"
        android:textColor="#000"
        android:textColorHint="#A3A3A3"/>

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColor="#000"
        android:textColorHint="#A3A3A3"/>

    <EditText
        android:id="@+id/edt_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/prefer_time"
        android:inputType="textPersonName"
        android:textColor="#000"
        android:textColorHint="#A3A3A3"/>

    <EditText
        android:id="@+id/edt_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/note_without"
        android:inputType="textPersonName"
        android:textColor="#000"
        android:textColorHint="#A3A3A3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:text="@android:string/cancel"
            android:textColor="#8B8B8B" />

        <Button
            android:id="@+id/btn_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/order" />
    </LinearLayout>
</LinearLayout>