<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/decline_order"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:backgroundTint="#8B8B8B"
        android:ems="10"
        android:hint="@string/why"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#000"
        android:textColorHint="#6B6B6B" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="#8B8B8B" />

        <Button
            android:id="@+id/btn_decline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_background"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/decline" />
    </LinearLayout>
</LinearLayout>