<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDBDBD"
    tools:context=".User.ForgotPassword">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#84CF98"
            android:theme="@style/Theme.BlackBackArrow"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="-50dp"
                android:text="@string/forgot_pass"
                android:textColor="#000000"
                android:textSize="30sp"></TextView>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbarlayout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_background"
            android:text="@string/send" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_reset_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_email"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/edt_OTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/OTP"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <EditText
            android:id="@+id/edt_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/new_pass"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <EditText
            android:id="@+id/edt_cf_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/cf_new_pass"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/btn_reset_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_background"
            android:text="@string/reset_pass" />

    </LinearLayout>

</RelativeLayout>