<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D1D1D1"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".User.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/login_box_background"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_background"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_to_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="@null"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/forgotpass"
                    android:textAllCaps="false"
                    android:textColor="#126100" />

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btn_to_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:background="@null"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textColor="#126100" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>